'接口联调完毕上线'

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- 移动端 适配  js+viewport -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>吉享云服-骑车融资租赁</title>
     <style>
       html,body {
         height: 100%;
